# OnnxParser

./: LICENSE
OnnxParser/: CMakeLists.txt
OnnxParser/cmake/: ENV.cmake  protobuf.cmake
OnnxParser/core/: CMakeLists.txt
OnnxParser/core/main/: main.cpp
OnnxParser/core/src/: NvOnnxParser.h  OnnxParser.cpp  OnnxParser.h
